# FlowOS_v2

./: .gitignore  Dockerfile  README.md  baseline.py  blog.md  client.py  collect_traces.py  eval.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  runtime.py  tasks.py  train.ipynb  train.py  train_sft.py  training_utils.py
plots/eval/: eval_episode_metrics.csv
server/: Dockerfile  app.py  developer_control_room_environment.py  requirements.txt  ui.py
tests/: test_calibration.py  test_environment_behaviors.py
